syntax = "proto3";
package gitopia.gitopia.rewards;

option go_package = "github.com/gitopia/gitopia/v4/x/rewards/types";

enum taskType {
  UNKNOWN = 0;
  CREATE_USER = 1;
  CREATE_NON_EMPTY_REPO = 2;
  CREATE_ISSUE = 3;
  CREATE_ISSUE_WITH_BOUNTY = 4;
  CREATE_ISSUE_WITH_BOUNTY_VERIFIED = 5;
  PR_TO_REPO_MERGED = 6;
  PR_TO_VERIFIED_REPO_MERGED = 7;
  PR_TO_VERIFIED_REPO_MERGED_WITH_BOUNTY = 8;
  LORE_STAKED = 9;
  VOTE_PROPOSAL = 10;
}

message Task {
  taskType type  = 1;
  bool isComplete  = 2;
  int32 weight = 3;
}
